emphasize the name

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Nick</h1>
+    <h1>Nick!!!</h1>
     <h2>Demo</h2>
     <p>Consistency <i>is</i></l> the key to success</p>
     <button>press</button>
